===========================================================================
 This file describes changes in the orb package beginning from version 1.2:
===========================================================================

==========================
 Changes from 2.0 -> 2.1:
==========================

  - Fixed some bugs for hash functions for compressed vectors/matrices.
  - Fixed a bug in the depth and depthmarks of orbits
  - Improved MakeSchreierTreeShallow for great depths
  - New implementation of AVL trees.
  - C-part to speed up AVL trees and hash tables.


==========================
 Changes from 1.5 -> 2.0:
==========================

  - Variant of "rattle" for random elements in normal closure.
  - Fixed 64bit issue for hash functions for compressed vectors.
  - Make compatible to GAP 4.4 again
  - New chapter as a worked out example of OrbitBySuborbit technology
  - Update of documentation to code
  - Sort out licensing business
  - Clean up examples directory
  - Added Co1 example to documentation
  - Added M11 example to documentation
  - Added Fi23 example to documentation
  - Use new "cheap" option of SmallerDegreePermutationRepresentation
  - Release revision 211 as version 2.0


==========================
 Changes from 1.4 -> 1.5:
==========================

  - Fixed documentation of ActionOnOrbit.
  - New FindSuborbits methods and OrbitIntersectionMatrix to compute
    condensed permutation modules in smaller cases.
  - Improved methods for Intersection2 and IntersectSet for hash
    orbits and perm on int orbits.
  - Made FindShortGeneratorsOfSubgroup an operation.
  - Methods for intersections of orbits.
  - Fixed bug in the unpickling of caches.
  - Fixed case of one generator in product replacers.
  - Take out Randomize methods for gf2 and 8bit vectors and matrices.
    They will reappear in GAP >= 4.5.
  - New method for finding transversals in matrix groups.
  - Use "Rattle" in product replacers (can be switched off)