@@ -56,10 +56,10 @@ Germany
     <Email>felix.noeske@math.rwth-aachen.de</Email>
     <Homepage>http://www.math.rwth-aachen.de/&tilde;Felix.Noeske</Homepage>
     </Author>
-    <Date>June 2008</Date>
+    <Date>July 2009</Date>
 
 <Copyright>
-  &copyright; 2005-2008 by Jürgen Müller, Max Neunhöffer and Felix Noeske<P/>
+  &copyright; 2005-2009 by Jürgen Müller, Max Neunhöffer and Felix Noeske<P/>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
